--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "description": "",
   "main": "src/index.js",
+  "bin": {
+    "cliAi": "./dist/src/cli/main.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec tsx src/index.ts"
@@ -12,13 +15,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clack/prompts": "^1.0.1",
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "better-auth": "^1.4.18",
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
+    "commander": "^14.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
-    "pg": "^8.18.0"
+    "figlet": "^1.10.0",
+    "open": "^11.0.0",
+    "pg": "^8.18.0",
+    "yocto-spinner": "^1.1.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
